--- a/WebContent/assets/index.css
+++ b/WebContent/assets/index.css
@@ -1,6 +1,8 @@
+/* nav-bar styling */
 .nav{
     padding: 1vw 6vw;
     background: #84dbffd1;
+    box-shadow: 0 1px 10px 1px;
 }
 .logo-nav{
     width: 100%;
@@ -29,4 +31,42 @@
     font-size: 1.5vw;
     color: #000080;
     cursor: pointer;
+}
+
+/* books styling*/
+.books{
+    padding: 1vw 6vw;
+}
+.books-contain{
+    width: 100%;
+}
+.book{
+    margin: 3vw 0;
+}
+.book img{
+    width: 50%;
+    align-self: center;
+    border: 2px solid #000080;
+    padding: 3px;
+}
+.book span{
+    text-align: center;
+    color: #000080;
+    font-weight: bold;
+    font-size: 1.5vw;
+}
+.book a{
+    text-align: center;
+}
+.buy-check{
+    width: 60%;
+    align-self: center;
+}
+.buy-check button{
+    outline: none;
+    border: none;
+    background: #000080;
+    color: white;
+    border-radius: 1vw;
+    padding: 0.5vw 1vw;
 }
