did registration and login form validations

--- a/WebContent/assets/css/index.css
+++ b/WebContent/assets/css/index.css
@@ -23,8 +23,10 @@
 .profile-nav{
     width: 100%;
     align-items: center;
+    z-index: 9;
 }
-.credentials span{
+.credentials a{
+    text-decoration: none;
     padding: 1vw;
     font-weight: bold;
     letter-spacing: 1px;
