--- a/WebContent/assets/css/loginPage.css
+++ b/WebContent/assets/css/loginPage.css
@@ -19,6 +19,8 @@
     overflow: auto;
 }
 .card h3{
+	width: 100%;
+	z-index: 9;
     padding: 1vw;
     font-weight: bold;
     color: #000080;
@@ -54,6 +56,7 @@
 .login{
     height: 100%;
     width: 100%;
+    top: 5vw;
 }
 .login form{
     height: 100%;
