designed carousel and scroll navbar

--- a/WebContent/assets/css/index.css
+++ b/WebContent/assets/css/index.css
@@ -28,6 +28,13 @@
     background-color: #84dbffd1;
     box-shadow: 0 1px 10px 1px;
 }
+.scroll-nav{
+	position: absolute;
+	width: 100%;
+    top: -15vw;
+	transition: top 0.5s ease-in-out;
+	z-index: 9;
+}
 .small-nav{
     width: 100%;
 }
@@ -45,9 +52,12 @@
     font-weight: 600;
     letter-spacing: 0.2vw;
     margin: 0 2vw;
-    color: #000080;
     cursor: pointer;
     position: relative;
+}
+.categories li>a{
+	text-decoration: none;
+    color: #000080;
 }
 .category-bottom{
 	width: 0;
