--- a/WebContent/assets/css/orders.css
+++ b/WebContent/assets/css/orders.css
@@ -96,6 +96,15 @@
     transform: translateX(-50%);
     left: 50%;
 }
+.confirm form>button{
+    background-color: #000080;
+    color: white;
+    border: none;
+    padding: 0.5vw 1vw;
+    border-radius: 8px;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
 .payment-method span{
     font-size: 2vw;
     color: #000080;
