new way to explore book's categories has been introduced from this commit

--- a/WebContent/assets/css/index.css
+++ b/WebContent/assets/css/index.css
@@ -43,35 +43,60 @@
 }
 .logo-categories{
 	align-items: center;
+	width: 25%;
+}
+.categories span{
+	font-size: 1.5vw;
+    font-weight: 600;
+    letter-spacing: 0.2vw;
+    cursor: pointer;
+	color: #000080;
+}
+.category-drop{
+	margin: 0; 
+	display: none;
+	background-color: #000080;
+	padding: 0;
+	z-index: 9;
 }
 .categories ul{
 	list-style-type: none;
 }
 .categories ul>li{
-	font-size: 2vw;
+	font-size: 1.5vw;
     font-weight: 600;
     letter-spacing: 0.2vw;
-    margin: 0 2vw;
     cursor: pointer;
     position: relative;
+    text-align: center;
+	width: 11vw;
 }
 .categories li>a{
 	text-decoration: none;
-    color: #000080;
+	color: white;
+	width: 100%;
+	display: block;
+	z-index: 10;
+	padding: 0.5vw;
+	transition: all 0.2s ease-in-out;
 }
 .category-bottom{
 	width: 0;
 	content: "";
 	height: 3px;
-	background-color: red;
+	background-color: white;
 	top: 100%;
 	left: 50%;
 	transform: translateX(-50%);
 	transition: width 0.22s ease-in-out;
 }
-.categories ul>li:hover .category-bottom{
+/* .categories ul>li:hover .category-bottom{
 	width: 100%;
-}
+} */
+.categories li>a:hover{
+	background-color: white;
+	color: #000080;
+} 
 .search{
 	display: flex;
 	align-items: center;
