--- a/WebContent/assets/css/index.css
+++ b/WebContent/assets/css/index.css
@@ -59,6 +59,7 @@
 	background-color: #000080;
 	padding: 0;
 	z-index: 9;
+	box-shadow: 0px 0px 7px 2px;
 }
 .categories ul{
 	list-style-type: none;
@@ -146,12 +147,16 @@
     align-self: center;
     border: 2px solid #000080;
     padding: 3px;
+	height: 50%;
 }
 .book span{
     text-align: center;
     color: #000080;
     font-weight: bold;
     font-size: 2vw;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .book a{
     text-align: center;
