--- a/WebContent/assets/css/orders.css
+++ b/WebContent/assets/css/orders.css
@@ -70,11 +70,14 @@
 }
 .img{
     margin-bottom: 1vw;
+    height: 10vw;
 }
 .img img{
     width: 100%;
-    border: 3px solid #000080;
-    padding: 2px;
+    align-self: center;
+    border: 2px solid #000080;
+    padding: 3px;
+	height: 100%;
 }
 .name span:first-child{
     font-size: 2vw;
